Änderungen für die Bildergalerie

--- a/bgetem/webmag/static/custom.css
+++ b/bgetem/webmag/static/custom.css
@@ -5,3 +5,106 @@ div.card--secondary p {
 div.callout-infobox > ul {
     list-style-type: none;
 }
+
+.gallery-column {
+  float: left;
+  width: 16.66%;
+  padding: 5px;
+}
+
+.gallery {
+  display: block;
+  position: relative;
+  z-index: 1;
+  padding-top: 25px;
+  padding-bottom: 50px;
+  left: 0;
+  top: 0;
+  height: auto;
+  overflow: auto;
+}
+
+.gallery-content {
+  position: relative;
+  margin: auto;
+  padding: 0;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.gallery-slides {
+  display: block;
+  padding: 5px;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 50px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+img {
+  margin-bottom: -4px;
+}
+
+.caption-container {
+  text-align: center;
+  padding: 2px 16px;
+  color: black;
+}
+
+.gallery-thumbs {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s;
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+@media only screen and (max-width:768px) {
+  .gallery-column {
+    width: 25%;
+  }
+}
